<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.taron.homework.MainActivity"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rel_lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:onClick="onClick"
        >
        <TextView
            android:id="@+id/activity_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/activity_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/john_smith"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_below="@id/activity_tv1"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/activity_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"/>



        <TextView
            android:id="@+id/john_foto"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/activity_tv3"
            android:text="@string/john_foto"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:background="@color/colorAccent"
            android:visibility="gone"
            />

        <View
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@id/john_foto"
            android:background="@color/white"
            />


        <RelativeLayout
            android:id="@+id/rel_lay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/empty_view"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:onClick="onClick"
            >

            <TextView
                android:id="@+id/activity_tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/activity_tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_tv4"
                android:text="@string/sarah_jonson"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/activity_tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/sarah_foto"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/activity_tv6"
                android:text="@string/sarah_foto"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:background="@color/colorPrimaryDark"
                android:visibility="gone"
                />

        </RelativeLayout>



    </RelativeLayout>

</RelativeLayout>
